--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,17 @@
 {
-  "name": "Stencil Starter",
-  "short_name": "Stencil",
+  "name": "workflow",
+  "short_name": "workflow",
   "start_url": "/",
   "display": "standalone",
   "icons": [{
-    "src": "assets/icon/icon.png",
+    "src": "assets/icon/icon192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },{
+    "src": "assets/icon/icon512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
-  "background_color": "#16161d",
-  "theme_color": "#16161d"
+  "background_color": "#488aff",
+  "theme_color": "#488aff"
 }
