--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "@ionic/core": "^5.3.2",
     "@stencil/core": "2.4.0"
+  },
+  "dependencies": {
+    "firebase": "^8.2.7"
   }
 }
