--- a/firebase.json
+++ b/firebase.json
@@ -43,7 +43,8 @@
       "port": 9000
     },
     "hosting": {
-      "port": 5000
+      "port": 5000,
+      "host": "0.0.0.0"
     },
     "ui": {
       "enabled": true
