--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
-    "@ionic/core": "^5.3.2",
+    "@ionic/core": "^5.6.5",
     "@stencil/core": "2.4.0"
   },
   "dependencies": {
-    "firebase": "^8.2.7"
+    "firebase": "^8.4.2",
+    "firebaseui": "^4.8.0"
   }
 }
